crates/tele-macros/tests/ui/fail/not_enum.rs
use tele_macros::BotCommands as DeriveBotCommands;

#[derive(DeriveBotCommands)]
struct NotAnEnum;

fn main() {}
