crates/tele-macros/tests/ui/fail/not_enum.stderr
error: BotCommands can only be derived for enums
 --> tests/ui/fail/not_enum.rs:4:8
  |
4 | struct NotAnEnum;
  |        ^^^^^^^^^
